--- a/quiz.html
+++ b/quiz.html
@@ -1,28 +1,148 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz Ultra Cyclisme</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quiz Ultra Cyclisme</title>
+
+<style>
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    background: #0f0f0f;
+    color: #ffffff;
+  }
+
+  .container {
+    max-width: 420px;
+    margin: auto;
+    padding: 20px;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 1.6rem;
+  }
+
+  #question {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+
+  button {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 12px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 10px;
+    background: #1f1f1f;
+    color: white;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background: #2d2d2d;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  #result {
+    font-size: 1.1rem;
+    line-height: 1.5;
+  }
+</style>
 </head>
+
 <body>
 
-  <div class="app">
-    <h1>Quel ultra-cycliste es-tu ?</h1>
+<div class="container">
+  <h1>Quel ultra-cycliste es-tu ?</h1>
 
-    <div id="quiz">
-      <p id="question"></p>
-      <div class="answers">
-        <button onclick="answer('A')" id="a"></button>
-        <button onclick="answer('B')" id="b"></button>
-        <button onclick="answer('C')" id="c"></button>
-      </div>
-    </div>
-
-    <div id="result" class="hidden"></div>
+  <div id="quiz">
+    <div id="question"></div>
+    <button onclick="answer('A')" id="a"></button>
+    <button onclick="answer('B')" id="b"></button>
+    <button onclick="answer('C')" id="c"></button>
   </div>
 
-  <script src="script.js"></script>
+  <div id="result" class="hidden"></div>
+</div>
+
+<script>
+  const questions = [
+    {
+      q: "Pourquoi fais-tu du vélo ?",
+      A: "A. Pour découvrir des paysages et vivre une aventure",
+      B: "B. Pour me dépasser et sortir de ma zone de confort",
+      C: "C. Pour performer, repousser mes limites et aller loin"
+    },
+    {
+      q: "Ton rapport à l’effort long",
+      A: "A. J’aime rouler longtemps tant que le plaisir est là",
+      B: "B. J’aime quand ça devient dur, mais gérable",
+      C: "C. J’aime quand ça fait mal… c’est là que je me révèle"
+    },
+    {
+      q: "Ton rapport à l’inconnu",
+      A: "A. J’adore improviser, explorer, me laisser surprendre",
+      B: "B. J’aime l’aventure, mais avec un minimum de cadre",
+      C: "C. J’aime les défis clairs, exigeants, presque extrêmes"
+    },
+    {
+      q: "Si tu pars plusieurs jours à vélo, tu privilégies…",
+      A: "A. Le voyage, les rencontres, les paysages",
+      B: "B. L’équilibre entre effort, plaisir et dépassement",
+      C: "C. La performance, la gestion du sommeil, la stratégie"
+    },
+    {
+      q: "Quand ça devient vraiment dur…",
+      A: "A. Je ralentis, je m’adapte, je savoure l’expérience",
+      B: "B. Je m’accroche, je trouve des ressources mentales",
+      C: "C. J’accélère : c’est là que je me sens vivant"
+    }
+  ];
+
+  let current = 0;
+  let score = { A: 0, B: 0, C: 0 };
+
+  function showQuestion() {
+    const q = questions[current];
+    document.getElementById("question").textContent = q.q;
+    document.getElementById("a").textContent = q.A;
+    document.getElementById("b").textContent = q.B;
+    document.getElementById("c").textContent = q.C;
+  }
+
+  function answer(letter) {
+    score[letter]++;
+    current++;
+    current < questions.length ? showQuestion() : showResult();
+  }
+
+  function showResult() {
+    document.getElementById("quiz").classList.add("hidden");
+
+    const resultKey = Object.keys(score).reduce((a, b) =>
+      score[a] > score[b] ? a : b
+    );
+
+    const results = {
+      A: "🌍 L’EXPLORATEUR<br><br>Tu roules avant tout pour l’aventure, la découverte et la liberté.<br>👉 Formats conseillés : parcours aventure, ultra accessible.",
+      B: "🔥 L’AVENTURIER<br><br>Tu aimes repousser tes limites tout en gardant une approche équilibrée.<br>👉 Formats conseillés : ultra intermédiaire, défis progressifs.",
+      C: "⚡ L’ULTRA-RIDER<br><br>Tu recherches l’intensité et le défi total.<br>👉 Formats conseillés : longues distances, autonomie complète."
+    };
+
+    const resultDiv = document.getElementById("result");
+    resultDiv.classList.remove("hidden");
+    resultDiv.innerHTML = results[resultKey];
+  }
+
+  showQuestion();
+</script>
+
 </body>
 </html>
